sdk/include/ml.h

/* ========================================================================== */
/*                              CORE TYPES & UTILITIES                         */
/* ========================================================================== */

/** Plugin Id string type - plain char* for plugin id
 * @ref ml_get_device_list device must in list of plugin ids
 */
typedef const char* ml_PluginId;
typedef enum {
    ML_LOG_LEVEL_TRACE, /* Trace messages */
    ML_LOG_LEVEL_DEBUG, /* Debug messages */
    ML_LOG_LEVEL_INFO,  /* Informational messages */
    ML_LOG_LEVEL_WARN,  /* Warning messages */
    ML_LOG_LEVEL_ERROR  /* Error messages */
} ml_LogLevel;
/** Logging callback function type */
typedef void (*ml_log_callback)(ml_LogLevel, const char*);
/* ====================  Core Initialization  ================================ */

/**
 * @brief Initialize the ML C-Lib runtime, starting the life cycle of the library.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe.
 */
ML_API int32_t ml_init(void);
/** Plugin id create function type */
typedef ml_PluginId (*ml_plugin_id_func)();
/** Plugin instance create function type */
typedef void* (*ml_create_plugin_func)();
/**
 * @brief Register a custom plugin with the ML C-Lib runtime.
 *
 * @param plugin_id_func[in]: The pointer to plugin create_id function.
 * @param create_func[in]: The pointer to plugin create function.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Thread-safe.
 */
ML_API int32_t ml_register_plugin(ml_plugin_id_func plugin_id_func, ml_create_plugin_func create_func);
/**
 * @brief Deinitialize the ML C-Lib runtime, ending the life cycle of the library.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe.
 */
ML_API int32_t ml_deinit(void);
/**
 * @brief Set custom logging callback function, call before init
 *
 * @param callback[in]: The callback function to set.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Thread-safe
 */
ML_API int32_t ml_set_log(ml_log_callback callback);
/**
 * @brief Simple wrapper around free() to free memory allocated by ML library functions
 *
 * @param ptr[in]: The pointer to free.
 *
 * @thread_safety: Thread-safe if called for different pointers.
 */
ML_API void ml_free(void* ptr);
/**
 * @brief Get Library Version
 *
 * @param out_version[out]: Pointer to the library version.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Thread-safe.
 */
ML_API const char* ml_version(void);
/** Output structure containing the list of available plugins */
typedef struct {
    ml_PluginId* plugin_ids;   /**< Array of plugin IDs (UTF-8) (caller must free with ml_free) */
    int32_t      plugin_count; /**< Number of plugin IDs in the list */
} ml_GetPluginListOutput;
/**
 * @brief Query the list of available plugins.
 *
 * @param output[out] Pointer to plugin list and count. caller must free with `ml_free`.
 *
 * @return ml_ErrorCode ML_SUCCESS on success, negative value on failure.
 *
 * @thread_safety: Not thread-safe.
 *
 * @note The returned plugin_list TODO
 */
ML_API int32_t ml_get_plugin_list(ml_GetPluginListOutput* output);
/** Input structure for querying available devices for a plugin */
typedef struct {
    ml_PluginId plugin_id; /**< Plugin identifier */
} ml_GetDeviceListInput;
/** Output structure containing the list of available devices */
typedef struct {
    // example: HTP0
    const char** device_ids;   /**< Array of device IDs  (caller must free with ml_free when not null) */
    const char** device_names; /**< Array of device names  (caller must free with ml_free when not null) */
    int32_t      device_count; /**< Number of device names in the list */
} ml_GetDeviceListOutput;
/**
 * @brief Query the list of available devices for a given plugin.
 *
 * @param input[in]   Pointer to input structure specifying the plugin.
 * @param output[out] Pointer to output structure to receive device list and count.
 *
 * @return ml_ErrorCode ML_SUCCESS on success, negative value on failure.
 *
 * @thread_safety: Not thread-safe.
 *
 * @note The returned device_list TODO
 */
ML_API int32_t ml_get_device_list(const ml_GetDeviceListInput* input, ml_GetDeviceListOutput* output);